# cookiecutter-pypackage

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.rst  README.rst  appveyor.yml  cookiecutter.json  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: prompts.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_short_name}}/: .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  appveyor.yml  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_short_name}}/ci/: executor.py
{{cookiecutter.project_short_name}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
