[bumpversion]
current_version = 0.3.1
commit = True
tag = True
tag_name = {new_version}

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]

[bumpversion:file:{{cookiecutter.project_short_name}}/setup.cfg]
search = 
	[rtpl-pypackage]
	version = {current_version}
replace = 
	[rtpl-pypackage]
	version = {new_version}

